syntax = "proto3";
option csharp_namespace = "Lapka.Notification.Infrastructure";

package notification.protos;
import "google/protobuf/empty.proto";

service NotificationService
{
	rpc RestartPassword(RestartPasswordRequest) returns (google.protobuf.Empty);
}

message RestartPasswordRequest
{
	string email = 1;
	string token = 2;
}